--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					Формула<br>водіння
 				</h1>
 			</div>
-			<video src="мобільне-відео.mp4" muted autoplay loop class="mobile-video"></video>
+			<video src="мобільне-відео.mp4" playsinline muted autoplay loop class="mobile-video"></video>
 		</section>
 		<section class="aboutus" id="aboutus">
 			<div class="wrapper aboutus__wrapper">
